# claude-coordinator

./: .gitignore  CLAUDE.md  GOAL.md  LICENSE  MANIFEST.in  README.md  board.py  coordinator.example.yml  coordinator.py  coordinator.yml  github_ops.py  install-agent.sh  pyproject.toml  split_app.py  workers.py
.claude/commands/: board.md  complete-session.md  coordinator.md
.claude/skills/run-claude-coordinator/: SKILL.md  driver.sh
.github/workflows/: cargo-test.yml  publish.yml  test.yml
coord/: __init__.py  _board_mapping.py  acceptance.py  acceptance_drivers.py  agent.py  agent_app.py  audit.py  auto_loop.py  board_bool_guard.py  board_service.py  board_wire.py  brain.py  branch_model.py  ci_github.py  ci_store.py  claim.py  cli.py  client.py  comments.py  config.py  conflict_fix.py  dao.py  db.py  deps.py  diagnose.py  dispatch.py  events.py  freshness.py  gate_b.py  gate_snapshot.py  github_ops.py  goal.py  hooks.py  housekeeping.py  interactive.py  issue_store.py  machine_pause.py  merge_queue.py  milestone_chat.py  milestone_dispatch.py  (+28 more)
coord/commands/: __init__.py  _common.py  acceptance.py  agent_ops.py  audit.py  chat.py  dispatch.py  dispatch_workers.py  issues.py  lifecycle.py  merge.py  milestone.py  plan_followup.py  plans.py  review.py  sessions.py  setup.py  status.py  terminal.py  test_gate.py
coord/dashboard/: index.html  server.py  terminal.py
coord/dashboard/webapp/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
coord/dashboard/webapp/e2e/: smoke.spec.ts  terminal.spec.ts
coord/dashboard/webapp/src/: App.tsx  index.css  main.tsx  test-setup.ts
coord/dashboard/webapp/src/api/: client.ts  generated.ts
coord/dashboard/webapp/src/components/: Detail.tsx  Home.tsx  MobileKeyBar.tsx  PipelineCard.tsx  SessionCard.tsx  Terminal.tsx  TerminalComingSoon.tsx
coord/dashboard/webapp/src/components/__tests__/: Detail.test.tsx  Home.test.tsx  MobileKeyBar.test.tsx  PipelineCard.test.tsx  SessionCard.test.tsx  Terminal.test.tsx  TerminalComingSoon.test.tsx
coord/dashboard/webapp/src/components/ui/: badge.tsx  card.tsx
coord/providers/: __init__.py  base.py  claude.py  claude_pty.py  opencode.py
coord/skills/update-issue/: SKILL.md
deploy/: coord-notify.service  coord-notify.timer  coord-serve.service  coord-web.service
docs/: AGENT_OPERATIONS.md  ARCHITECTURE.md  ARCH_SECURITY_GATES.md  COCKPIT.md  CONTROL_CENTER.md  CROSS_PLATFORM.md  ISSUE_GUIDANCE.md  ORACLE_LOOP.md  PHONE_WEBAPP.md  PIPELINE_V2.md  PLATFORM_EVOLUTION.md
graphify-out/: .gitignore  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
graphify-out/cache/: stat-index.json
scripts/: codegen.py  gen_board_fixture.py  smoke_437_interactive.py  verify_878_review_capture.py
tests/: SMOKE_SET.md  conftest.py  test_acceptance.py  test_acceptance_drivers.py  test_agent.py  test_agent_app.py  test_agent_branch_base.py  test_agent_branch_capture.py  test_agent_reap.py  test_agent_repos_and_pull.py  test_agent_update.py  test_agent_zero_commit.py  test_approve_reject_plan.py  test_assignment_already_recorded_daemon.py  test_audit_log.py  test_audit_outcome.py  test_audit_query.py  test_auto_loop.py  test_board_cap_762.py  test_board_fixture.py  test_board_read_path.py  test_board_service.py  test_board_state.py  test_brain.py  test_branch_model.py  test_ci_store.py  test_claim.py  test_cli_acceptance.py  test_cli_assign.py  test_cli_assign_interactive_oracle_gate.py  test_cli_assign_interactive_remote.py  test_cli_audit.py  test_cli_chat_continue.py  test_cli_install_drift.py  test_cli_install_skills.py  test_cli_issue_create_label.py  test_cli_merge.py  test_cli_milestone_assign.py  test_cli_milestone_capture.py  test_cli_milestone_chat_add_child.py  (+122 more)
tests/acceptance/ms-33/: audit_1039.rs  contract.md  manifest.yml
tests/acceptance/ms-33/mocks/: audit-panel-detail.screen  audit-panel-empty.screen  audit-panel-filters.screen  audit-panel-populated.screen
tests/acceptance/ms-37/: conftest.py  contract.md  manifest.yml  test_usage_cli_1115.py  test_usage_core_1118.py  usage_tui_1116.rs
tests/acceptance/ms-38/: contract.md
tests/acceptance/ms-38/mocks/: plans-base.screen  plans-detail-pane.screen  plans-help-overlay.screen  plans-palette.screen  plans-rightclick-epic.screen  plans-rightclick-header.screen  plans-rightclick-stub.screen
tests/fixtures/: opencode_run_sample.jsonl
tui/: Cargo.toml  b.err  build.err  t.err  t.out
tui/src/: app.rs  commands.rs  lib.rs  main.rs  settings.rs
tui/src/app/: audit.rs  chat.rs  data.rs  dialogs.rs  events.rs  fixtures.rs  fleet_sessions.rs  fleet_terminals.rs  format.rs  milestone_dag.rs  mod.rs  pipeline.rs  plans.rs  render.rs  sessions.rs  settings_ui.rs  sidebar.rs  terminal.rs  tests.rs  types.rs  usage.rs  workspace.rs
tui/tests/: acceptance.rs
tui/tests/fixtures/: board_sample.json
