[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-coordinator"
version = "0.4.39"
description = "Coordinate Claude Code workers across multiple machines and repos."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "John Donaghy", email = "johnfdonaghy@gmail.com" }]
keywords = ["claude", "claude-code", "multi-agent", "coordinator", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/JDonaghy/claude-coordinator"
Repository = "https://github.com/JDonaghy/claude-coordinator"
Issues = "https://github.com/JDonaghy/claude-coordinator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
coord = "coord.cli:main"

[tool.setuptools.packages.find]
include = ["coord*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
