[package]
name = "coord-tui"
version = "0.1.0"
edition = "2021"
description = "TUI dashboard for claude-coordinator (quadraui-powered)"

[[bin]]
name = "coord-tui"
path = "src/main.rs"

# GTK binary requires the `gtk` feature (builds a GTK4 desktop window).
# Build with: cargo build --features gtk --bin coord-tui-gtk
[[bin]]
name = "coord-tui-gtk"
path = "src/bin/gtk.rs"
required-features = ["gtk"]

[features]
# Enables the GTK4 backend in quadraui and the coord-tui-gtk binary.
# Requires GTK4 development libraries on the build host.
gtk = ["quadraui/gtk"]

[dependencies]
quadraui = { path = "../../quadraui/quadraui", features = ["tui"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
gethostname = "1.1"
ureq = "2"
