[package]
name = "coord-tui"
version = "0.1.0"
edition = "2021"
description = "TUI dashboard for claude-coordinator (quadraui-powered)"

[[bin]]
name = "coord-tui"
path = "src/main.rs"

# GTK binary requires the `gtk` feature (builds a GTK4 desktop window).
# Build with: cargo build --features gtk --bin coord-tui-gtk
[[bin]]
name = "coord-tui-gtk"
path = "src/bin/gtk.rs"
required-features = ["gtk"]

[features]
# Enables the GTK4 backend in quadraui and the coord-tui-gtk binary.
# Requires GTK4 development libraries on the build host.
gtk = ["quadraui/gtk"]

# #1042: exposes `make_test_app` and sibling app-construction fixtures
# (`app::fixtures`, normally `#[cfg(test)]`-private) as `pub` at the crate
# root, so an external integration-test crate (`tui/tests/acceptance.rs`)
# can build a `CoordApp` from in-memory `BoardData` — no live daemon —
# exactly like the in-crate tests do. Off for a normal `cargo build`/
# `cargo test`; enable with `cargo test --features test-support`.
test-support = []

[dependencies]
# `terminal` enables quadraui's PTY + vt100 + scrollback engine
# (`quadraui::terminal_engine::TerminalSession`) so the Terminal panel
# (#424) can host a live shell inside the TUI. Always-on — the feature
# pulls in `portable-pty` + `vt100`, which are small native deps.
quadraui = { path = "../../quadraui/quadraui", features = ["tui", "terminal"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
gethostname = "1.1"
ureq = "2"
